--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+nav {
+  background-color: rgb(66, 66, 66);
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 8px;
+}
+nav ul {
+  gap: 16px;
+}
